--- a/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/MainForm.form
+++ b/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/MainForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.8" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -49,7 +49,7 @@
           <Properties>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="ok... 1 from : to&#xa;ok... 2 from : to&#xa;ok... 3 from : to&#xa;ok... 4 from : to&#xa;5 from : to"/>
+            <Property name="text" type="java.lang.String" value="f:\u005ctest\u005cdir 1\u005c &gt; a:\u005cdfsd\u005csdg&#xa;D:\u005c&#x41f;&#x440;&#x43e;&#x432;&#x435;&#x440;&#x43a;&#x430; &#x43f;&#x430;&#x43f;&#x43a;&#x430;1    &gt; F:/test1/tesy1/dfdgf/&#xa;ok... D:\u005cGhj\u005c&#xa;ok... D:\u005cGhj\u005c   &gt; F:/test1/tesy1/dfdgf/&#xa;F:/test1/tesy1/dfdgf/&#xa;g:/ddsg/&#xa;a:\u005cdfsd\u005csdg&gt;a:\u005cdfsd\u005csdg" containsInvalidXMLChars="true"/>
           </Properties>
         </Component>
       </SubComponents>
