--- a/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/MainForm.form
+++ b/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/MainForm.form
@@ -3,6 +3,7 @@
 <Form version="1.8" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="&#x41f;&#x430;&#x442;&#x447; &#x43f;&#x435;&#x440;&#x435;&#x438;&#x43c;&#x435;&#x43d;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x44f; &#x43f;&#x443;&#x442;&#x435;&#x439; &#x434;&#x43b;&#x44f; FlylinkDC++"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -32,7 +33,7 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane1" pref="271" max="32767" attributes="0"/>
+              <Component id="jScrollPane1" pref="329" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -49,8 +50,12 @@
           <Properties>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="f:\u005ctest\u005cdir 1\u005c &gt; a:\u005cdfsd\u005csdg&#xa;D:\u005c&#x41f;&#x440;&#x43e;&#x432;&#x435;&#x440;&#x43a;&#x430; &#x43f;&#x430;&#x43f;&#x43a;&#x430;1    &gt; F:/test1/tesy1/dfdgf/&#xa;ok... D:\u005cGhj\u005c&#xa;ok... D:\u005cGhj\u005c   &gt; F:/test1/tesy1/dfdgf/&#xa;F:/test1/tesy1/dfdgf/&#xa;g:/ddsg/&#xa;a:\u005cdfsd\u005csdg&gt;a:\u005cdfsd\u005csdg" containsInvalidXMLChars="true"/>
+            <Property name="text" type="java.lang.String" value="&#x424;&#x43e;&#x440;&#x43c;&#x430;&#x442;:&#xa;&#x421;&#x442;&#x430;&#x440;&#x44b;&#x439; &#x43f;&#x443;&#x442;&#x44c; &gt; &#x41d;&#x43e;&#x432;&#x44b;&#x439; &#x41f;&#x443;&#x442;&#x44c;&#xa;&#x421;&#x442;&#x430;&#x440;&#x44b;&#x439; &#x43f;&#x443;&#x442;&#x44c; &gt; &#x41d;&#x43e;&#x432;&#x44b;&#x439; &#x41f;&#x443;&#x442;&#x44c;&#xa;...&#xa;###&#xa;&#x41f;&#x440;&#x438;&#x43c;&#x435;&#x440;&#x44b;:&#xa;#&#xa;&#xa;&#x414;&#x438;&#x440;&#x435;&#x43a;&#x442;&#x43e;&#x440;&#x438;&#x438;:&#xa;# D:\u005cfolder 1\u005csub1\u005c   &gt; D:\u005cPicture\u005cCars\u005c&#xa;# D:\u005cfolder 2             &gt; E:\u005cMovies&#xa;&#xa;&#x424;&#x430;&#x439;&#x43b;&#x44b;:&#xa;# E:\u005cdir1\u005cw1.mkv      &gt; E:\u005cdir1\u005cwarm water.mkv&#xa;# e:\u005cdir1\u005c175.png     &gt; f:\u005cbigcat.png&#xa;&#xa;&#x41f;&#x43e;&#x43c;&#x435;&#x442;&#x43a;&#x438; &#x43e; &#x432;&#x44b;&#x43f;&#x43e;&#x43b;&#x43d;&#x435;&#x43d;&#x438;&#x438;:&#xa;[OK]:         &#x422;&#x435;&#x43a;&#x443;&#x449;&#x430;&#x44f; &#x441;&#x442;&#x440;&#x43e;&#x43a;&#x430; &#x443;&#x441;&#x43f;&#x435;&#x448;&#x43d;&#x43e; &#x432;&#x44b;&#x43f;&#x43e;&#x43b;&#x43d;&#x435;&#x43d;&#x430;&#xa;[ERROR]:  &#x41d;&#x435;&#x43f;&#x440;&#x430;&#x432;&#x438;&#x43b;&#x44c;&#x43d;&#x44b;&#x439; &#x444;&#x43e;&#x440;&#x43c;&#x430;&#x442; &#x442;&#x435;&#x43a;&#x443;&#x449;&#x435;&#x439; &#x441;&#x442;&#x440;&#x43e;&#x43a;&#x438;" containsInvalidXMLChars="true"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="listFilesMouseReleased"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="listFilesMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -61,7 +66,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Component id="btnRenameInDb" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="267" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="626" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
