--- a/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/MainForm.form
+++ b/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/MainForm.form
@@ -3,10 +3,10 @@
 <Form version="1.8" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="v0.1 - &#x41f;&#x430;&#x442;&#x447; &#x43f;&#x435;&#x440;&#x435;&#x438;&#x43c;&#x435;&#x43d;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x44f; &#x43f;&#x443;&#x442;&#x435;&#x439; &#x434;&#x43b;&#x44f; FlylinkDC++"/>
+    <Property name="title" type="java.lang.String" value="v0.1.1 - &#x41f;&#x430;&#x442;&#x447; &#x43f;&#x435;&#x440;&#x435;&#x438;&#x43c;&#x435;&#x43d;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x44f; &#x43f;&#x443;&#x442;&#x435;&#x439; &#x434;&#x43b;&#x44f; FlylinkDC++"/>
   </Properties>
   <AccessibilityProperties>
-    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="v0.1 - &#x41f;&#x430;&#x442;&#x447; &#x43f;&#x435;&#x440;&#x435;&#x438;&#x43c;&#x435;&#x43d;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x44f; &#x43f;&#x443;&#x442;&#x435;&#x439; &#x434;&#x43b;&#x44f; FlylinkDC++"/>
+    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="&#x41f;&#x430;&#x442;&#x447; &#x43f;&#x435;&#x440;&#x435;&#x438;&#x43c;&#x435;&#x43d;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x44f; &#x43f;&#x443;&#x442;&#x435;&#x439; &#x434;&#x43b;&#x44f; FlylinkDC++"/>
   </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
