--- a/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/MainForm.form
+++ b/FlylinkDCpatchFileRenamer/src/reg/util/dc/flylink/renamer/MainForm.form
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.8" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Container class="javax.swing.JPopupMenu" name="menuMain">
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+        <Property name="useNullLayout" type="boolean" value="true"/>
+      </Layout>
+      <SubComponents>
+        <MenuItem class="javax.swing.JMenuItem" name="menuCopy">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="&#x41a;&#x43e;&#x43f;&#x438;&#x440;&#x43e;&#x432;&#x430;&#x442;&#x44c;"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuCopyActionPerformed"/>
+          </Events>
+        </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="menuCut">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="&#x412;&#x44b;&#x440;&#x435;&#x437;&#x430;&#x442;&#x44c;"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuCutActionPerformed"/>
+          </Events>
+        </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="menuPaste">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="&#x412;&#x441;&#x442;&#x430;&#x432;&#x438;&#x442;&#x44c;"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuPasteActionPerformed"/>
+          </Events>
+        </MenuItem>
+        <Component class="javax.swing.JPopupMenu$Separator" name="jSeparator1">
+        </Component>
+        <MenuItem class="javax.swing.JMenuItem" name="menuClear">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="&#x41e;&#x447;&#x438;&#x441;&#x442;&#x438;&#x442;&#x44c;"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuClearActionPerformed"/>
+          </Events>
+        </MenuItem>
+      </SubComponents>
+    </Container>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="&#x41f;&#x430;&#x442;&#x447; &#x43f;&#x435;&#x440;&#x435;&#x438;&#x43c;&#x435;&#x43d;&#x43e;&#x432;&#x430;&#x43d;&#x438;&#x44f; &#x43f;&#x443;&#x442;&#x435;&#x439; &#x434;&#x43b;&#x44f; FlylinkDC++"/>
@@ -57,7 +101,6 @@
           </Properties>
           <Events>
             <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="listFilesMouseReleased"/>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="listFilesMouseClicked"/>
           </Events>
         </Component>
       </SubComponents>
@@ -71,13 +114,9 @@
                   <Component id="btnRenameInDb" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="chkReverseRename" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="btnBackupDb" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnOpenLog" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnClearLog" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="116" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="btnLogOpen" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="350" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -85,9 +124,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnRenameInDb" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnBackupDb" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnOpenLog" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnClearLog" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnLogOpen" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="chkReverseRename" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -99,19 +136,9 @@
             <Property name="text" type="java.lang.String" value="&#x41f;&#x435;&#x440;&#x435;&#x438;&#x43c;&#x43d;&#x43e;&#x432;&#x430;&#x442;&#x44c; &#x432; &#x411;&#x414;"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="btnBackupDb">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="&#x410;&#x440;&#x445;&#x438;&#x432;&#x430;&#x446;&#x438;&#x44f; &#x411;&#x414;"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JButton" name="btnOpenLog">
+        <Component class="javax.swing.JButton" name="btnLogOpen">
           <Properties>
             <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x43a;&#x440;&#x44b;&#x442;&#x44c; &#x43b;&#x43e;&#x433;"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JButton" name="btnClearLog">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="&#x41e;&#x447;&#x438;&#x441;&#x442;&#x438;&#x442;&#x44c; &#x43b;&#x43e;&#x433;"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JCheckBox" name="chkReverseRename">
